fwknop-2.5.1 (07/25/2013):
    - [client] Bug fix to reset terminal setting to orignal values after
      entering keys via stdin.
    - [server] Bug fix to not print pid file existence warning.  Reported by
      Ilya Tumaykin to the fwknop list.
    - [test suite] Bug fix to not run an iptables Rijndael HMAC test on
      non-Linux systems.

fwknop-2.5 (07/19/2013):
    - ***** IMPORTANT *****:  If you are upgrading from an older version of
      fwknop, you will want to read the "Backwards Compatibility" section of
      the fwknop tutorial available here:

      http://www.cipherdyne.org/fwknop/docs/fwknop-tutorial.html#backwards-compatibility

      In summary, it is possible to have a mixed environment of fwknop-2.5
      clients and/or servers with older client and/or servers, but this
      requires some configuration in order to work properly.  On the server
      side, the directive "ENCRYPTION_MODE legacy" will need to be added to
      every access.conf stanza that uses Rijndael and that needs to support
      SPA packets from pre-2.5 clients.  On the client side when generating
      Rijndael-encrypted SPA packets from a pre-2.5 server, the command line
      argument "-M legacy" will need to be given.  GnuPG operations are not
      affected however and don't require the above steps whenever the new HMAC
      authenticated encryption feature (offered in fwknop-2.5) is not used.
    - Major release of new functionality - HMAC authenticated encryption
      support in the encrypt-then-authenticate model for SPA communications.
      Supported HMAC digests include MD5, SHA1, SHA256, SHA384, and SHA512.
      The default is HMAC-SHA256 when an HMAC is used.  The HMAC mode is
      supported for both Rijndael and GPG encrypted SPA packet data, and
      provides a significant security benefit for the fwknopd server since the
      HMAC verification is more simplisitic than decryption operations.  This